--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
-  "name": "app-name",
-  "version": "0.0.1",
+  "name": "umassemsapp",
+  "version": "1.0.0",
   "dependencies": {
-    "angular-marked": "latest",
-    "ngtouch": "^1.0.1"
-  },
-  "private": true
+    "angular-cookies": "^1.6.1",
+    "angular-marked": "^1.2.2",
+    "angular-touch": "^1.6.1",
+    "pageslide": "*"
+  }
 }
