--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
